# CubeZ

./: CMakeLists.txt  ChangeLog.md  LICENSE  License.txt  Readme.md
cmake/: CompileOptionSelector.cmake  LibFindMacros.cmake  Toolchain_F_TCS.cmake  Toolchain_ITO_TCS.cmake  Toolchain_NEC_Aurora.cmake  Toolchain_intel_SKL.cmake  cz_package.cmake
doc/: Memo.md
example/: CMakeLists.txt  memo.md  scripts.txt
example/tri/: CMakeLists.txt  plot.py  test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp  test7.cpp
src/: CMakeLists.txt  main.cpp
src/cz_cpp/: CB_Define.h  CB_Define_stub.h  CB_SubDomain.h  CB_SubDomain_stub.h  CMakeLists.txt  DomainInfo.h  blas_simd.cpp  cz.h  czVersion.h.in  cz_Define.h  cz_Evaluate.cpp  cz_Ffunc.h  cz_Init.cpp  cz_Loop.cpp  cz_Poisson.cpp  cz_Post.cpp  cz_blas.cpp  cz_comm.cpp  cz_dsolver.cpp  cz_lsor.cpp  cz_lsor_relax.cpp  cz_lsor_rhs.cpp  cz_lsor_simd.cpp  cz_miscel.cpp  cz_pcr.cpp  cz_simd.cpp  cz_tdma.cpp  lsor_relax.cpp  lsor_simd.cpp  obsolete.cpp  tdma.cpp
src/cz_f90/: CMakeLists.txt  cz_blas.f90  cz_fparam.fi  cz_ljcb.f90  cz_lsolver.f90  cz_lsor.f90  cz_maf.f90  cz_solver.f90  cz_utility.f90  nvtx.f90  obsolete.f90
src/tmp/: LS.cpp  LS.h  main.cpp
test/: Makefile  test.cpp
