###################################################################################
#
# CubeZ
#
# Copyright (C) 2018 Research Institute for Information Technology(RIIT), Kyushu University.
# All rights reserved.
#
###################################################################################

# Install files

install(FILES
        test.tp
        terrain.tp
        isopeak.tp
        DESTINATION example
)
